[gd_scene load_steps=17 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://img/lcd.png" type="Texture" id=2]
[ext_resource path="res://bit.tscn" type="PackedScene" id=3]
[ext_resource path="res://conthrax-sb.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://label.tres" type="DynamicFont" id=5]
[ext_resource path="res://img/chasing.png" type="Texture" id=6]
[ext_resource path="res://img/right_off.png" type="Texture" id=7]
[ext_resource path="res://img/right_on.png" type="Texture" id=8]
[ext_resource path="res://img/left_off.png" type="Texture" id=9]
[ext_resource path="res://img/left_on.png" type="Texture" id=10]
[ext_resource path="res://img/budown_off.png" type="Texture" id=11]
[ext_resource path="res://img/down_on.png" type="Texture" id=12]
[ext_resource path="res://img/ok_off.png" type="Texture" id=13]
[ext_resource path="res://img/ok_on.png" type="Texture" id=14]
[ext_resource path="res://img/puase_offblue.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]

font/size = 60
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="lcd" type="Sprite" parent="."]

transform/pos = Vector2( 39.4828, 34.2346 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="bg" type="ColorFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 720.0
margin/bottom = 1280.0
color = Color( 0.871094, 0.871094, 0.871094, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorFrame" type="ColorFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 40.0
margin/right = 680.0
margin/bottom = 940.0
color = Color( 0.124664, 0.167969, 0.154774, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Posscreen" type="Position2D" parent="."]

transform/pos = Vector2( 0, 20 )
z/z = 10
z/relative = false

[node name="posbit" type="Position2D" parent="."]

transform/pos = Vector2( 20, 40 )

[node name="bit" parent="posbit" instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="bitnext1" parent="." instance=ExtResource( 3 )]

visibility/opacity = 0.1
transform/pos = Vector2( 590.011, 116.849 )
transform/scale = Vector2( 0.8, 0.8 )

[node name="bitnext" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 590.011, 116.849 )
transform/scale = Vector2( 0.8, 0.8 )

[node name="pause" type="Label" parent="."]

process/pause_mode = 2
visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 243.0
margin/top = 477.0
margin/right = 490.0
margin/bottom = 550.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.449312, 0.96875, 0.0189209, 1 )
text = "Pause"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="shlevel" type="Label" parent="."]

visibility/opacity = 0.1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 585.0
margin/top = 267.0
margin/right = 657.0
margin/bottom = 297.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.406265, 0.9375, 0.164795, 1 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="shscore" type="Label" parent="."]

visibility/opacity = 0.1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 586.0
margin/top = 357.0
margin/right = 658.0
margin/bottom = 387.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.406265, 0.9375, 0.164795, 1 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="levelval" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 633.0
margin/top = 268.0
margin/right = 675.0
margin/bottom = 298.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.364471, 1, 0.0429688, 1 )
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="levelval10" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 609.0
margin/top = 268.0
margin/right = 651.0
margin/bottom = 298.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.364471, 1, 0.0429688, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 609.0
margin/top = 357.0
margin/right = 651.0
margin/bottom = 387.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.364471, 1, 0.0429688, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="efek" type="Position2D" parent="."]

transform/pos = Vector2( -10, -10 )

[node name="eftime" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="line" type="Position2D" parent="."]

transform/pos = Vector2( 40, 20 )
z/z = 11

[node name="Timer line" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="chasing" type="Sprite" parent="."]

z/z = 50
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="button" type="Node2D" parent="."]

transform/pos = Vector2( 168.473, 1042.11 )
transform/scale = Vector2( 0.7, 0.7 )
z/z = 51

[node name="RIGHT" type="TouchScreenButton" parent="button"]

transform/pos = Vector2( 58.172, -0.33606 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="LEFT" type="TouchScreenButton" parent="button"]

transform/pos = Vector2( -189.901, -0.626587 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="DOWN" type="TouchScreenButton" parent="button"]

transform/pos = Vector2( -74.6346, 147.341 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="OK" type="TouchScreenButton" parent="button"]

transform/pos = Vector2( 488.461, 82.7483 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="TextureButton" type="TextureButton" parent="button"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 555.0
margin/top = -125.0
margin/right = 635.0
margin/bottom = -45.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 15 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Label" type="Label" parent="button"]

visibility/visible = false
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 573.0
margin/top = -29.0
margin/right = 647.0
margin/bottom = -7.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.542969, 0.528967, 0.515396, 1 )
text = "pause"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Timer line" to="." method="_on_Timer_line_timeout"]

[connection signal="pressed" from="button/RIGHT" to="." method="_on_RIGHT_pressed"]

[connection signal="pressed" from="button/LEFT" to="." method="_on_LEFT_pressed"]

[connection signal="pressed" from="button/DOWN" to="." method="_on_DOWN_pressed"]

[connection signal="released" from="button/DOWN" to="." method="_on_DOWN_released"]

[connection signal="pressed" from="button/OK" to="." method="_on_OK_pressed"]

[connection signal="toggled" from="button/TextureButton" to="." method="_on_TextureButton_toggled"]


